# simple-host-networks-manager

./: Cargo.toml
.cargo/: config.toml
simple_host_networks_manager_cli/: Cargo.toml
simple_host_networks_manager_cli/src/: main.rs
simple_host_networks_manager_lib/: Cargo.toml
simple_host_networks_manager_lib/src/: lib.rs  structs.rs
simple_host_networks_manager_lib/src/tests/: main_test.rs
