[package]
name = "simple_host_networks_manager_cli"
version = "0.0.4"
edition = "2021"

authors = ["Dario Caruso"]
description = "host networks manager cli"
license = "Apache-2.0"
documentation = "https://docs.rs/simple_host_networks_manager_cli"
repository = "https://github.com/dottgonzo/simple-host-networks-manager"



[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
simple_host_networks_manager_lib = { version = "0.0.8", default-features = false }
tokio = { version = "1.33.0", default-features = false, features = ["macros","rt-multi-thread"] }
