[package]
name = "simple_host_networks_manager_lib"
version = "0.0.0"
edition = "2021"

authors = ["Dario Caruso"]
description = "host networks manager"
license = "Apache-2.0"
documentation = "https://docs.rs/simple-host-networks-manager-lib"
repository = "https://github.com/dottgonzo/simple-host-networks-manager"


[dependencies]
rust-simple-ping = { version = "0.0.0" }
anyhow = { version = "1.0.75" }

tokio = { version = "1.33.0", default-features = false, features = ["macros"] }
