[package]
name = "simple_host_networks_manager_lib"
version = "0.0.7"
edition = "2021"

authors = ["Dario Caruso"]
description = "host networks manager lib"
license = "Apache-2.0"
documentation = "https://docs.rs/simple_host_networks_manager_lib"
repository = "https://github.com/dottgonzo/simple-host-networks-manager"


[dependencies]
rust-simple-ping = { version = "0.0.0" }
anyhow = { version = "1.0.75" }
default-net = { version = "0.21.0" }

tokio = { version = "1.33.0", default-features = false, features = ["macros"] }
tokio-wifiscanner = "0.2.*"
net-route = "0.2.11"
