[package]
name = "simple_host_networks_manager_lib"
version = "0.0.9"
edition = "2021"

authors = ["Dario Caruso"]
description = "host networks manager lib"
license = "Apache-2.0"
documentation = "https://docs.rs/simple_host_networks_manager_lib"
repository = "https://github.com/dottgonzo/simple-host-networks-manager"


[dependencies]
rust-simple-ping = { version = "0.0.0", default-features = false }
anyhow = { version = "1.0.75" }
default-net = { version = "0.21.0", default-features = false }

tokio = { version = "1.33.0", default-features = false, features = ["macros"] }
tokio-wifiscanner = { version = "0.2.*", default-features = false }
net-route = { version = "0.2.11", default-features = false }
async-recursion =  { version = "1.0.5", default-features = false }
serde_json = { version = "1.0.113", default-features = false, features = ["std"] }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
